--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
             From the moment we met, you've made my world brighter. Will you be my Valentine and make this day even more special? ❤️
         </p>
         <div class="buttons">
-            <button id="yes-btn" class="btn yes">Yes! 💍</button>
+            <button id="yes-btn" class="btn yes">Yes!🫀</button>
             <button id="no-btn" class="btn no😭" style="position: relative; left: auto; top: auto;">No 😢</button> <!-- Initial relative positioning to keep it side-by-side -->
         </div>
         <div id="response" class="response hidden"></div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
